--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SafeAir Navigator",
-  "name": "SafeAir Navigator - Smart Navigation System",
+  "short_name": "CityLife Nexus",
+  "name": "CityLife Nexus - Smart Navigation System",
   "icons": [
     {
       "src": "favicon.ico",
