--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "safeair-navigator-frontend",
+  "name": "citylife-nexus-frontend",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -55,12 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
   }
 }
